--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -10,8 +10,9 @@
   align-items: end;
 
   &_type {
-    &_call {
+    &_callback {
       grid-template-rows: min-content min-content min-content 1fr;
+      min-height: auto;
     }
 
     &_measure {
@@ -43,10 +44,6 @@
       @include media-small {
         grid-column: 1 / 2;
         grid-row: 1 / 2;
-
-        // input {
-        //   padding: 1rem 4rem 1rem 1rem;
-        // }
       }
 
       @include media-mobile {
