--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -123,7 +123,7 @@
 
   @include media-small {
     min-height: 100vh;
-    padding: 7rem 1rem 0;
+    padding: 7rem 1rem 5rem;
     max-width: 32rem;
     position: fixed;
     top: 0;
