--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -46,7 +46,7 @@
 
 .catalog__subtitle_s {
   @include text($color-bg);
-  padding: 1rem 0 2.2rem;
+  padding: 1rem 0 1.6rem;
   display: none;
 
   @include media-small {
@@ -84,7 +84,7 @@
   }
 
   @include media-mobile {
-    grid-template-rows: 11.8rem 6.4rem;
+    grid-template-rows: 9.9rem 5.6rem;
   }
 }
 
@@ -123,7 +123,7 @@
 
   @include media-small {
     min-height: 100vh;
-    padding: 7rem 1rem 5rem;
+    padding: 7rem 1rem 7rem;
     max-width: 32rem;
     position: fixed;
     top: 0;
@@ -191,9 +191,11 @@
   border-radius: 0.8rem;
 
   @include media-small {
+    width: 4.6rem;
+    height: 4.6rem;
     display: flex;
     grid-row: 2 / 3;
     grid-column: 1 / 2;
-    justify-self: start;
+    justify-self: end;
   }
 }
