--- a/src/pages/Catalog/components/FilterList/FilterList.scss
+++ b/src/pages/Catalog/components/FilterList/FilterList.scss
@@ -11,6 +11,7 @@
 
   @include media-small {
     padding: 1.8rem 0.8rem;
+    gap: 1.3rem;
   }
 }
 
@@ -24,4 +25,8 @@
   display: flex;
   flex-direction: column;
   gap: 1.8rem;
+
+  @include media-small {
+    gap: 1.2rem;
+  }
 }
