--- a/src/pages/CardPage/components/Colors/Colors.scss
+++ b/src/pages/CardPage/components/Colors/Colors.scss
@@ -6,6 +6,14 @@
   padding: 2rem 0 10rem;
   display: flex;
   flex-direction: column;
+
+  @include media-tablet {
+    padding: 2rem 0 6rem;
+  }
+
+  @include media-mobile {
+    padding: 2rem 0 4rem;
+  }
 }
 
 .colors__title {
@@ -53,6 +61,96 @@
   border-radius: 1.25rem;
 }
 
+.colors__items {
+  width: 100%;
+
+  &_close {
+    height: 27.8rem;
+    overflow: hidden;
+
+    @include media-medium {
+      height: 23.5rem;
+    }
+
+    @include media-laptop {
+      height: 19rem;
+    }
+
+    @include media-tablet {
+      height: 16rem;
+    }
+
+    @include media-small {
+      height: 11rem;
+    }
+
+    @include media-mobile {
+      height: 9rem;
+    }
+  }
+
+  /* Стилизация таблицы */
+  table {
+    width: 100%;
+    border-collapse: collapse;
+  }
+
+  /* Стилизация ячеек */
+  th,
+  td {
+    @include text-s;
+    padding: 8px 0;
+    text-align: center;
+
+    @include media-medium {
+      width: 18rem;
+    }
+
+    @include media-laptop {
+      padding: 6px 0;
+      width: 15rem;
+      font-size: 12px;
+    }
+
+    @include media-small {
+      padding: 4px 0;
+      font-size: 10px;
+    }
+
+    @include media-mobile {
+      font-size: 8px;
+    }
+  }
+
+  /* Стилизация изображений */
+  td img {
+    display: flex;
+    width: 22rem;
+    aspect-ratio: 1 / 1;
+    border-radius: 1.25rem;
+
+    @include media-medium {
+      width: 18rem;
+    }
+
+    @include media-laptop {
+      width: 15rem;
+    }
+
+    @include media-tablet {
+      width: 12rem;
+    }
+
+    @include media-small {
+      width: 8rem;
+    }
+
+    @include media-mobile {
+      width: 5.5rem;
+    }
+  }
+}
+
 .colors__show-button {
   @include button;
   @include text($color: $color-bg);
@@ -67,10 +165,12 @@
   }
 
   @include media-tablet {
+    margin-top: 2rem;
     margin-right: 8rem;
   }
 
   @include media-mobile {
+    margin-top: 1rem;
     margin-right: 0;
   }
 }
