--- a/src/pages/NotFoundPage/NotFoundPage.scss
+++ b/src/pages/NotFoundPage/NotFoundPage.scss
@@ -3,15 +3,15 @@
 @import '../../styles/abstract/mixins.scss';
 
 .not-found {
+  padding: 6rem 0;
   margin: auto;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .not-found__wrapper {
-  min-height: 58rem;
+  min-height: 38rem;
   position: relative;
   display: grid;
   grid-template-rows: 1fr min-content;
@@ -19,7 +19,7 @@
 
   @include media-mobile {
     display: block;
-    min-height: 100vh;
+    min-height: 40vh;
   }
 }
 
@@ -75,7 +75,7 @@
 
   @include media-mobile {
     position: absolute;
-    bottom: 3rem;
+    bottom: 2rem;
     left: 50%;
     transform: translate(-50%, 0);
     font-size: 1.2rem;
