--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -11,7 +11,7 @@
   }
 
   @include media-small {
-    padding: 7rem 0 0;
+    padding: 6.2rem 0 0;
     background-color: $color-light-l;
     box-shadow: -4px -4px 15px 0px rgba(122, 112, 112, 0.2),
       4px 4px 15px 0px rgba(122, 112, 112, 0.2);
@@ -46,7 +46,7 @@
 
 .catalog__subtitle_s {
   @include text($color-bg);
-  padding: 1rem 0 1.6rem 3.6rem;
+  padding: 1rem 0 1.4rem 3.6rem;
   display: none;
 
   @include media-small {
@@ -62,6 +62,7 @@
   align-items: start;
   column-gap: 2.2rem;
   row-gap: 1rem;
+  @extend %transition-all;
 
   @include media-medium {
     grid-template-rows: 7.8rem 7.8rem auto;
@@ -84,7 +85,7 @@
   }
 
   @include media-mobile {
-    grid-template-rows: 9.9rem 5.6rem;
+    grid-template-rows: 4.5rem 5.6rem;
 
     &_small {
       grid-template-rows: 0.1rem 5.6rem;
