--- a/src/pages/Catalog/components/SearchForm/SearchForm.scss
+++ b/src/pages/Catalog/components/SearchForm/SearchForm.scss
@@ -34,8 +34,7 @@
   background-repeat: no-repeat;
 
   @include media-mobile {
-    top: 1.1rem;
-    right: 1.6rem;
+    display: none;
   }
 }
 
@@ -49,6 +48,6 @@
 
   @include media-mobile {
     top: 1.1rem;
-    right: 1.6rem;
+    right: 5rem;
   }
 }
