Улучшение навигации каталога, добавлена CatalogSection в каталог

--- a/src/components/CatalogSection/CatalogCard/CatalogCard.scss
+++ b/src/components/CatalogSection/CatalogCard/CatalogCard.scss
@@ -1,6 +1,6 @@
-@import '../../../../../styles/abstract/constants.scss';
-@import '../../../../../styles/abstract/mixins.scss';
-@import '../../../../../styles/abstract/placeholders.scss';
+@import '../../../styles/abstract/constants.scss';
+@import '../../../styles/abstract/mixins.scss';
+@import '../../../styles/abstract/placeholders.scss';
 
 .catalog-card {
   padding: 2.9rem;
