--- a/src/pages/Catalog/Catalog.scss
+++ b/src/pages/Catalog/Catalog.scss
@@ -206,3 +206,24 @@
     justify-self: end;
   }
 }
+
+.catalog__button-reset {
+  @include button;
+  @include text;
+  padding: 1.2rem;
+  width: 12rem;
+  min-height: 4.6rem;
+  display: none;
+  justify-self: start;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  background-color: $color-light-xl;
+  border-radius: 0.8rem;
+  color: $color-bg-violet;
+  outline: none;
+  @extend %transition-all;
+
+  @include media-small {
+    display: flex;
+  }
+}
