--- a/src/pages/Catalog/components/Sort/Sort.scss
+++ b/src/pages/Catalog/components/Sort/Sort.scss
@@ -19,7 +19,8 @@
   }
 
   @include media-small {
-    justify-self: start;
+    margin-right: 5.2rem;
+    //justify-self: start;
     grid-column: 1 / 2;
     grid-row: 2 / 3;
   }
@@ -39,6 +40,7 @@
   }
 
   @include media-small {
+    width: 4.6rem;
     height: 4.6rem;
   }
 }
@@ -60,7 +62,30 @@
   justify-content: space-between;
 
   @include media-small {
-    padding: 0.8rem 1.6rem;
+    //padding: 0.8rem 1.6rem;
+    display: none;
+  }
+}
+
+.sort__button-s {
+  @include button;
+  padding: 1.2rem;
+  width: 100%;
+  display: none;
+  background-position: center;
+  background-size: 3.4rem;
+  background-repeat: no-repeat;
+
+  &_up {
+    background-image: url(../../../../images/Catalog/arrow-up.svg);
+  }
+
+  &_down {
+    background-image: url(../../../../images/Catalog/arrow-down.svg);
+  }
+
+  @include media-small {
+    display: flex;
   }
 }
 
@@ -69,7 +94,7 @@
   width: 100%;
   position: absolute;
   top: 50%;
-  left: 0;
+  right: 0;
   display: flex;
   flex-direction: column;
   border-radius: 0 0 0.8rem 0.8rem;
@@ -84,6 +109,11 @@
     z-index: 5;
     visibility: visible;
     opacity: 1;
+  }
+
+  @include media-small {
+    width: 18.5rem;
+    border-radius: 0.8rem 0 0.8rem 0.8rem;
   }
 }
 
