--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -10,6 +10,7 @@ $color-lime-active: #d8ff17;
 $color-bg: #660066;
 $color-bg-violet: #430043;
 $color-bg-dark: #2e002e;
+$color-bg-middle: #b425df;
 $color-bg-light: #a173df;
 $bg-overlay: rgba(0, 0, 0, 0.5);
 
