--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -48,6 +48,11 @@
       @include text-s($color-light-xl);
       background-color: $color-bg-light;
     }
+
+    &_new {
+      @include text-s($color-light-xl);
+      background-color: $color-bg-middle;
+    }
   }
 }
 
