--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -125,6 +125,11 @@
       @include text-s($color-light-xl);
       background-color: $color-bg-light;
     }
+
+    &_new {
+      @include text-s($color-light-xl);
+      background-color: $color-bg-middle;
+    }
   }
 }
 
