--- a/src/pages/Home/components/Promo/Promo.scss
+++ b/src/pages/Home/components/Promo/Promo.scss
@@ -182,7 +182,7 @@
   position: relative;
   @include link;
   @include button;
-  @include text;
+  @include text($color-light-xl);
   width: 36.7rem;
   height: 5.4rem;
   border-radius: 0.8rem;
