--- a/src/pages/CardPage/CardPage.scss
+++ b/src/pages/CardPage/CardPage.scss
@@ -218,3 +218,25 @@
     grid-column: 1 / 3;
   }
 }
+
+.card-page__description-block {
+  @include text;
+  padding-bottom: 1rem;
+
+  &_slogan {
+    font-weight: $fw-semibold;
+    color: $color-bg-light;
+  }
+
+  &_tel {
+    text-decoration: none;
+    white-space: nowrap;
+    @extend %transition-all;
+
+    @include media-hover {
+      &:hover {
+        transform: scale(1.01);
+      }
+    }
+  }
+}
