--- a/src/styles/abstract/constants.scss
+++ b/src/styles/abstract/constants.scss
@@ -1,17 +1,17 @@
 $color-light-xl: #fff;
-$color-light-l: #e7e6e6;
+$color-light-l: #eed8c9; //#e7e6e6;
 $color-light-m: #e2e2e2;
 $color-dark-m: #757575;
 $color-dark-l: #545454;
 $color-dark-xl: #000;
 $color-red: #8c002a;
-$color-lime: #cde943;
-$color-lime-active: #d8ff17;
-$color-bg: #660066;
-$color-bg-violet: #430043;
-$color-bg-dark: #2e002e;
-$color-bg-middle: #b425df;
-$color-bg-light: #a173df;
+$color-lime: #63ab7b; //#cde943;
+$color-lime-active: #63ab7b; // #d8ff17;
+$color-bg: #e99787; // #660066;
+$color-bg-violet: #af8078; // #430043;
+$color-bg-dark: #727077; // #2e002e;
+$color-bg-middle: #f4b3a7; // #b425df;
+$color-bg-light: #c57297; //#a173df;
 $bg-overlay: rgba(0, 0, 0, 0.5);
 
 // для медиа-запросов
